--- a/MiniDOGE.html
+++ b/MiniDOGE.html
@@ -18,7 +18,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
-      background-image: url('https://i.imgur.com/dFgG0WT.jpg'); /* Dark-themed background */
+      background-image: url('https://i.imgur.com/dFgG0WT.jpg');
       background-size: cover;
       background-attachment: fixed;
     }
@@ -34,7 +34,7 @@
 
     h1 {
       font-size: 32px;
-      color: #ffcc00; /* Doge yellow */
+      color: #ffcc00;
       margin-bottom: 20px;
       text-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
     }
@@ -53,11 +53,12 @@
     #content-frame {
       width: 100%;
       height: 400px;
-      border: 2px solid #ffcc00; /* Doge yellow outline */
+      border: 2px solid #ffcc00;
       border-radius: 8px;
       margin-top: 20px;
       background-color: #000;
-      box-shadow: 0 0 20px rgba(255, 204, 0, 0.5); /* Doge yellow glow */
+      box-shadow: 0 0 20px rgba(255, 204, 0, 0.5);
+      overflow: hidden; /* Prevent overflow issues */
     }
 
     .input-group {
@@ -72,14 +73,14 @@
       padding: 10px;
       margin-right: 10px;
       background-color: #333;
-      color: #ffcc00; /* Doge yellow text */
-      border: 2px solid #ffcc00; /* Doge yellow border */
+      color: #ffcc00;
+      border: 2px solid #ffcc00;
       border-radius: 5px;
       transition: border 0.3s;
     }
 
     .input-group input:focus {
-      border: 2px solid #ff9900; /* Slightly darker Doge color on focus */
+      border: 2px solid #ff9900;
       outline: none;
     }
 
@@ -88,15 +89,15 @@
       padding: 10px 20px;
       border: none;
       border-radius: 5px;
-      background-color: #ffcc00; /* Doge yellow button */
+      background-color: #ffcc00;
       color: #000;
       cursor: pointer;
       transition: background 0.3s;
-      box-shadow: 0 0 15px rgba(255, 204, 0, 0.5); /* Doge yellow button glow */
+      box-shadow: 0 0 15px rgba(255, 204, 0, 0.5);
     }
 
     .input-group button:hover {
-      background-color: #ff9900; /* Slightly darker Doge color on hover */
+      background-color: #ff9900;
     }
 
     .status-message {
@@ -121,7 +122,7 @@
 <body>
   <div class="container">
     <h1> MiniDOGE </h1>
-    <img src="https://avatars.githubusercontent.com/u/146743206?v=4.png" class="doge" alt="Doge Meme">
+    <img src="https://avatars.githubusercontent.com/u/146743206?v=4" class="doge" alt="Doge Meme">
     <iframe id="content-frame" loading="lazy"></iframe>
     <div class="input-group">
       <input type="text" id="url-input" placeholder="Enter the URL to unblock" autofocus>
@@ -143,10 +144,12 @@
         return;
       }
 
+      // Constructing the proxy URL
       const proxyUrl = `https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(urlInput)}`;
       statusMessage.textContent = "Unblocking website, please wait...";
       statusMessage.style.color = "#888";
 
+      // Fetching content through the proxy
       fetch(proxyUrl)
         .then(response => {
           if (response.ok) {
@@ -168,14 +171,20 @@
           console.error("Error unblocking website:", error);
           statusMessage.textContent = "Failed to unblock the website. Please try again.";
           statusMessage.style.color = "#F44336";
+          
+          // Let's clear the iframe on error
+          const doc = contentFrame.contentDocument || contentFrame.contentWindow.document;
+          doc.open();
+          doc.write("<h2 style='color: red;'>Failed to load the website.</h2>");
+          doc.close();
         });
     }
 
     function adjustIframeDocument(doc, originalUrl) {
       const base = doc.createElement('base');
-      base.href = originalUrl;
+      base.href = originalUrl; // Set the base URL for relative paths
       doc.head.appendChild(base);
     }
   </script>
 </body>
-</html> 
+</html>
