--- a/MiniDOGE.html
+++ b/MiniDOGE.html
@@ -1,181 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> MiniDOGE Web Unblocker</title>
-  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Courier Prime', monospace;
-      margin: 0;
-      padding: 0;
-      background-color: #1e1e1e;
-      color: #00ff00;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      background-image: url('https://i.imgur.com/dFgG0WT.jpg'); /* Dark-themed background */
-      background-size: cover;
-      background-attachment: fixed;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MiniDOGE Web Unblocker</title>
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Courier Prime', monospace;
+            margin: 0;
+            padding: 0;
+            background-color: #1e1e1e;
+            color: #00ff00;
+            text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-image: url('https://i.imgur.com/dFgG0WT.jpg');
+            background-size: cover;
+            background-attachment: fixed;
+        }
 
-    .container {
-      background-color: rgba(32, 32, 32, 0.95);
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
-      max-width: 600px;
-      width: 90%;
-    }
+        .container {
+            background-color: rgba(32, 32, 32, 0.95);
+            border-radius: 12px;
+            padding: 30px;
+            box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+            max-width: 600px;
+            width: 90%;
+        }
 
-    h1 {
-      font-size: 32px;
-      color: #ffcc00; /* Doge yellow */
-      margin-bottom: 20px;
-      text-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
-    }
+        h1 {
+            font-size: 32px;
+            color: #ffcc00;
+            margin-bottom: 20px;
+            text-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
+        }
 
-    img.doge {
-      width: 100px;
-      height: auto;
-      margin: 10px;
-      transition: transform 0.3s;
-    }
+        img.doge {
+            width: 100px;
+            height: auto;
+            margin: 10px;
+            transition: transform 0.3s;
+        }
 
-    img.doge:hover {
-      transform: scale(1.1);
-    }
+        img.doge:hover {
+            transform: scale(1.1);
+        }
 
-    #content-frame {
-      width: 100%;
-      height: 400px;
-      border: 2px solid #ffcc00; /* Doge yellow outline */
-      border-radius: 8px;
-      margin-top: 20px;
-      background-color: #000;
-      box-shadow: 0 0 20px rgba(255, 204, 0, 0.5); /* Doge yellow glow */
-    }
+        #content-frame {
+            width: 100%;
+            height: 400px;
+            border: 2px solid #ffcc00;
+            border-radius: 8px;
+            margin-top: 20px;
+            background-color: #000;
+            box-shadow: 0 0 20px rgba(255, 204, 0, 0.5);
+        }
 
-    .input-group {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
+        .input-group {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
 
-    .input-group input {
-      flex-grow: 1;
-      font-size: 18px;
-      padding: 10px;
-      margin-right: 10px;
-      background-color: #333;
-      color: #ffcc00; /* Doge yellow text */
-      border: 2px solid #ffcc00; /* Doge yellow border */
-      border-radius: 5px;
-      transition: border 0.3s;
-    }
+        .input-group input {
+            flex-grow: 1;
+            font-size: 18px;
+            padding: 10px;
+            margin-right: 10px;
+            background-color: #333;
+            color: #ffcc00;
+            border: 2px solid #ffcc00;
+            border-radius: 5px;
+            transition: border 0.3s;
+        }
 
-    .input-group input:focus {
-      border: 2px solid #ff9900; /* Slightly darker Doge color on focus */
-      outline: none;
-    }
+        .input-group input:focus {
+            border: 2px solid #ff9900;
+            outline: none;
+        }
 
-    .input-group button {
-      font-size: 18px;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      background-color: #ffcc00; /* Doge yellow button */
-      color: #000;
-      cursor: pointer;
-      transition: background 0.3s;
-      box-shadow: 0 0 15px rgba(255, 204, 0, 0.5); /* Doge yellow button glow */
-    }
+        .input-group button {
+            font-size: 18px;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #ffcc00;
+            color: #000;
+            cursor: pointer;
+            transition: background 0.3s;
+            box-shadow: 0 0 15px rgba(255, 204, 0, 0.5);
+        }
 
-    .input-group button:hover {
-      background-color: #ff9900; /* Slightly darker Doge color on hover */
-    }
+        .input-group button:hover {
+            background-color: #ff9900;
+        }
 
-    .status-message {
-      margin-top: 20px;
-      font-size: 18px;
-      font-weight: 700;
-    }
+        .status-message {
+            margin-top: 20px;
+            font-size: 18px;
+            font-weight: 700;
+        }
 
-    @media (max-width: 768px) {
-      .input-group {
-        flex-direction: column;
-        align-items: center;
-      }
-      .input-group input,
-      .input-group button {
-        width: 100%;
-        margin-bottom: 10px;
-      }
-    }
-  </style>
+        @media (max-width: 768px) {
+            .input-group {
+                flex-direction: column;
+                align-items: center;
+            }
+            .input-group input,
+            .input-group button {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1> MiniDOGE </h1>
-    <img src="https://avatars.githubusercontent.com/u/146743206?v=4.png" class="doge" alt="Doge Meme">
+<div class="container">
+    <h1>MiniDOGE</h1>
+    <img src="https://avatars.githubusercontent.com/u/146743206?v=4" class="doge" alt="Doge Meme">
     <iframe id="content-frame" loading="lazy"></iframe>
     <div class="input-group">
-      <input type="text" id="url-input" placeholder="Enter the URL to unblock" autofocus>
-      <button onclick="unblockWebsite()">Unblock</button>
+        <input type="text" id="url-input" placeholder="Enter the URL to unblock" autofocus>
+        <button onclick="unblockWebsite()">Unblock</button>
     </div>
     <div class="status-message" id="status-message"></div>
-  </div>
+</div>
 
-  <script>
+<script>
     function unblockWebsite() {
-      const urlInput = document.getElementById("url-input").value.trim();
-      const contentFrame = document.getElementById("content-frame");
-      const statusMessage = document.getElementById("status-message");
+        const urlInput = document.getElementById("url-input").value.trim();
+        const contentFrame = document.getElementById("content-frame");
+        const statusMessage = document.getElementById("status-message");
 
-      // Validate the input URL
-      if (!urlInput) {
-        statusMessage.textContent = "Please enter a valid URL.";
-        statusMessage.style.color = "#FF0000";
-        return;
-      }
+        // Validate the input URL
+        if (!urlInput || !isValidUrl(urlInput)) {
+            statusMessage.textContent = "Please enter a valid URL.";
+            statusMessage.style.color = "#FF0000";
+            return;
+        }
 
-      const proxyUrl = `https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(urlInput)}`;
-      statusMessage.textContent = "Unblocking website, please wait...";
-      statusMessage.style.color = "#888";
+        // Construct the proxy URL using api.codetabs
+        const proxyUrl = `https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(urlInput)}`;
 
-      fetch(proxyUrl)
-        .then(response => {
-          if (response.ok) {
-            return response.text();
-          } else {
-            throw new Error(`Failed to unblock website (${response.status})`);
-          }
-        })
-        .then(content => {
-          const doc = contentFrame.contentDocument || contentFrame.contentWindow.document;
-          doc.open();
-          doc.write(content);
-          doc.close();
-          adjustIframeDocument(doc, urlInput);
-          statusMessage.textContent = "Website unblocked successfully!";
-          statusMessage.style.color = "#4CAF50";
-        })
-        .catch(error => {
-          console.error("Error unblocking website:", error);
-          statusMessage.textContent = "Failed to unblock the website. Please try again.";
-          statusMessage.style.color = "#F44336";
-        });
+        statusMessage.textContent = "Unblocking website, please wait...";
+        statusMessage.style.color = "#888";
+
+        // Fetching content through the proxy
+        fetch(proxyUrl)
+            .then(response => {
+                if (response.ok) {
+                    return response.text();
+                } else {
+                    throw new Error(`Failed to unblock website (${response.status})`);
+                }
+            })
+            .then(content => {
+                const doc = contentFrame.contentDocument || contentFrame.contentWindow.document;
+                doc.open();
+                doc.write(content);
+                doc.close();
+                adjustIframeDocument(doc, urlInput);
+                statusMessage.textContent = "Website unblocked successfully!";
+                statusMessage.style.color = "#4CAF50";
+            })
+            .catch(error => {
+                console.error("Error unblocking website:", error);
+                statusMessage.textContent = "Failed to unblock the website. Please try again.";
+                statusMessage.style.color = "#F44336";
+
+                // Clear the iframe on error
+                const doc = contentFrame.contentDocument || contentFrame.contentWindow.document;
+                doc.open();
+                doc.write("<h2 style='color: red;'>Failed to load the website.</h2>");
+                doc.close();
+            });
     }
 
     function adjustIframeDocument(doc, originalUrl) {
-      const base = doc.createElement('base');
-      base.href = originalUrl;
-      doc.head.appendChild(base);
+        const base = doc.createElement('base');
+        base.href = originalUrl; // Set the base URL for relative paths
+        doc.head.appendChild(base);
     }
-  </script>
+
+    // Basic URL validation
+    function isValidUrl(url) {
+        const pattern = new RegExp('^(https?:\\/\\/)?' + // protocol
+            '((([a-z\\d]([a-z\\d-]*[a-z\\d])?)\\.)+[a-z]{2,}|' + // domain name
+            'localhost|' + // localhost...
+            '\\d{1,3}\\d{1,3}\\d{1,3}\\d{1,3}|' + // IP
+            '\\[?[a-fA-F\\d:]+\\]?)' + // IPv6
+            '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
+            '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
+            '(\\#[-a-z\\d_]*)?$','i'); // fragment locator
+        return !!pattern.test(url);
+    }
+</script>
 </body>
-</html> 
+</html>
