--- a/MiniDOGE.html
+++ b/MiniDOGE.html
@@ -4,136 +4,164 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiniDOGE Web Unblocker</title>
-    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@300;600&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Courier Prime', monospace;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #1e1e1e;
-            color: #00ff00;
-            text-align: center;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2b2b2b 100%);
+            color: #ecf0f1;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: flex-start;
             min-height: 100vh;
-            background-image: url('https://i.imgur.com/dFgG0WT.jpg');
-            background-size: cover;
-            background-attachment: fixed;
+            overflow: auto;
+            background-size: 200% 200%;
+            animation: gradient 10s ease infinite;
+        }
+
+        @keyframes gradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .container {
-            background-color: rgba(32, 32, 32, 0.95);
-            border-radius: 12px;
-            padding: 30px;
-            box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
-            max-width: 600px;
+            background: rgba(50, 50, 50, 0.90);
+            border-radius: 16px;
+            padding: 40px;
+            box-shadow: 0 16px 32px rgba(0, 0, 0, 0.8);
+            max-width: 900px;
             width: 90%;
+            margin: 40px auto;
+            backdrop-filter: blur(15px);
+            animation: fadeIn 0.5s ease-in-out;
+            position: relative;
+            overflow: hidden;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
         h1 {
-            font-size: 32px;
-            color: #ffcc00;
-            margin-bottom: 20px;
-            text-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
+            font-size: 48px;
+            margin-bottom: 15px;
+            color: #f39c12;
+            text-align: center;
+            text-shadow: 0 0 20px rgba(243, 156, 18, 0.7);
         }
 
         h2 {
-            font-size: 24px;
-            color: #ffcc00;
-            margin-top: 40px;
-            text-shadow: 0 0 10px rgba(255, 204, 0, 0.8);
+            font-size: 32px;
+            margin: 20px 0 10px;
+            color: #f1c40f;
+            text-align: center;
         }
 
         img.doge {
-            width: 100px;
+            width: 200px;
             height: auto;
-            margin: 10px;
-            transition: transform 0.3s;
+            margin: 20px auto;
+            animation: bounce 1.5s infinite;
         }
 
-        img.doge:hover {
-            transform: scale(1.1);
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-15px); }
+            60% { transform: translateY(-8px); }
         }
 
         .iframe-container {
-            position: relative;
-            margin-top: 20px;
+            margin: 20px 0;
+            border-radius: 12px;
+            box-shadow: 0 8px 40px rgba(239, 59, 36, 0.8);
             overflow: hidden;
-            border: 2px solid #ffcc00;
-            border-radius: 8px;
-            box-shadow: 0 0 20px rgba(255, 204, 0, 0.5);
+            position: relative;
+            transition: transform 0.3s;
+        }
+
+        .iframe-container:hover {
+            transform: scale(1.02);
         }
 
         iframe {
             width: 100%;
-            height: 400px;
-            background-color: #000;
+            max-height: 450px;
             border: none;
+            transition: opacity 0.2s;
         }
 
         .fullscreen-button {
             position: absolute;
             right: 10px;
             bottom: 10px;
-            background-color: rgba(255, 204, 0, 0.8);
+            background: linear-gradient(to right, #ff5733, #ffcc00);
             border: none;
-            color: black;
-            padding: 5px 10px;
-            font-size: 14px;
             border-radius: 5px;
+            color: white;
+            padding: 10px 20px;
+            font-size: 16px;
             cursor: pointer;
-            transition: background 0.3s;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
+            transition: background 0.3s, transform 0.2s;
         }
 
         .fullscreen-button:hover {
-            background-color: #ff9900;
+            background: linear-gradient(to right, #ffcc00, #ff5733);
+            transform: translateY(-2px);
         }
 
         .input-group {
             display: flex;
             justify-content: center;
             margin-top: 20px;
+            position: relative;
+            z-index: 10;
         }
 
         .input-group input {
             flex-grow: 1;
             font-size: 18px;
-            padding: 10px;
+            padding: 15px;
             margin-right: 10px;
-            background-color: #333;
-            color: #ffcc00;
-            border: 2px solid #ffcc00;
+            background-color: #34495e;
+            color: #ecf0f1;
+            border: 2px solid #f39c12;
             border-radius: 5px;
-            transition: border 0.3s;
+            transition: border 0.3s, box-shadow 0.3s;
         }
 
         .input-group input:focus {
-            border: 2px solid #ff9900;
+            border: 2px solid #f1c40f;
+            box-shadow: 0 0 8px rgba(243, 156, 18, 0.7);
             outline: none;
         }
 
         .input-group button {
             font-size: 18px;
-            padding: 10px 20px;
+            padding: 15px 25px;
             border: none;
             border-radius: 5px;
-            background-color: #ffcc00;
-            color: #000;
+            background: linear-gradient(to right, #f39c12, #e67e22);
+            color: white;
             cursor: pointer;
-            transition: background 0.3s;
-            box-shadow: 0 0 15px rgba(255, 204, 0, 0.5);
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
 
         .input-group button:hover {
-            background-color: #ff9900;
+            background: linear-gradient(to right, #e67e22, #f39c12);
+            transform: translateY(-2px);
         }
 
         .status-message {
-            margin-top: 20px;
+            margin-top: 15px;
             font-size: 18px;
-            font-weight: 700;
+            font-weight: 600;
+            position: relative;
         }
 
         @media (max-width: 768px) {
@@ -147,16 +175,23 @@
                 margin-bottom: 10px;
             }
         }
+
+        .footer {
+            margin-top: 30px;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
 <div class="container">
     <h1>MiniDOGE</h1>
     <img src="https://avatars.githubusercontent.com/u/146743206?v=4" class="doge" alt="Doge Meme">
+    
     <div class="iframe-container">
-        <iframe id="content-frame" loading="lazy"></iframe>
+        <iframe id="content-frame" src=""></iframe>
         <button class="fullscreen-button" onclick="toggleFullscreen('content-frame')">Fullscreen</button>
     </div>
+    
     <div class="input-group">
         <input type="text" id="url-input" placeholder="Enter the URL to unblock" autofocus>
         <button onclick="unblockWebsite()">Unblock</button>
@@ -165,13 +200,13 @@
 
     <h2>BlookSploit Flooder</h2>
     <div class="iframe-container">
-        <iframe id="blooksploit-frame" src="https://blooksploit.ssp.42web.io/" loading="lazy" allowfullscreen></iframe>
+        <iframe id="blooksploit-frame" src="https://blooksploit.ssp.42web.io/"></iframe>
         <button class="fullscreen-button" onclick="toggleFullscreen('blooksploit-frame')">Fullscreen</button>
     </div>
 
     <h2>Doge Unblocker:</h2>
     <div class="iframe-container">
-        <iframe id="doge-unblocker-frame" src="https://dogev4.ssp.42web.io/" loading="lazy" allowfullscreen></iframe>
+        <iframe id="doge-unblocker-frame" src="https://dogev4.ssp.42web.io/"></iframe>
         <button class="fullscreen-button" onclick="toggleFullscreen('doge-unblocker-frame')">Fullscreen</button>
     </div>
 </div>
@@ -182,20 +217,17 @@
         const contentFrame = document.getElementById("content-frame");
         const statusMessage = document.getElementById("status-message");
 
-        // Validate the input URL
         if (!urlInput || !isValidUrl(urlInput)) {
             statusMessage.textContent = "Please enter a valid URL.";
             statusMessage.style.color = "#FF0000";
             return;
         }
 
-        // Construct the proxy URL using api.codetabs
         const proxyUrl = `https://api.codetabs.com/v1/proxy?quest=${encodeURIComponent(urlInput)}`;
 
         statusMessage.textContent = "Unblocking website, please wait...";
         statusMessage.style.color = "#888";
 
-        // Fetching content through the proxy
         fetch(proxyUrl)
             .then(response => {
                 if (response.ok) {
@@ -211,14 +243,13 @@
                 doc.close();
                 adjustIframeDocument(doc, urlInput);
                 statusMessage.textContent = "Website unblocked successfully!";
-                statusMessage.style.color = "#4CAF50";
+                statusMessage.style.color = "#2ecc71"; // green
             })
             .catch(error => {
                 console.error("Error unblocking website:", error);
                 statusMessage.textContent = "Failed to unblock the website. Please try again.";
-                statusMessage.style.color = "#F44336";
+                statusMessage.style.color = "#e74c3c"; // red
 
-                // Clear the iframe on error
                 const doc = contentFrame.contentDocument || contentFrame.contentWindow.document;
                 doc.open();
                 doc.write("<h2 style='color: red;'>Failed to load the website.</h2>");
@@ -228,20 +259,19 @@
 
     function adjustIframeDocument(doc, originalUrl) {
         const base = doc.createElement('base');
-        base.href = originalUrl; // Set the base URL for relative paths
+        base.href = originalUrl; 
         doc.head.appendChild(base);
     }
 
-    // Basic URL validation
     function isValidUrl(url) {
-        const pattern = new RegExp('^(https?:\\/\\/)?' + // protocol
-            '((([a-z\\d]([a-z\\d-]*[a-z\\d])?)\\.)+[a-z]{2,}|' + // domain name
-            'localhost|' + // localhost...
-            '\\d{1,3}\\d{1,3}\\d{1,3}\\d{1,3}|' + // IP
-            '\\[?[a-fA-F\\d:]+\\]?)' + // IPv6
-            '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
-            '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
-            '(\\#[-a-z\\d_]*)?$','i'); // fragment locator
+        const pattern = new RegExp('^(https?:\\/\\/)?' + 
+            '((([a-z\\d]([a-z\\d-]*[a-z\\d])?)\\.)+[a-z]{2,}|' + 
+            'localhost|' + 
+            '\\d{1,3}\\d{1,3}\\d{1,3}\\d{1,3}|' + 
+            '\\[?[a-fA-F\\d:]+\\]?)' + 
+            '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + 
+            '(\\?[;&a-z\\d%_.~+=-]*)?' + 
+            '(\\#[-a-z\\d_]*)?$','i'); 
         return !!pattern.test(url);
     }
 
@@ -249,9 +279,9 @@
         const iframe = document.getElementById(iframeId);
         if (iframe.requestFullscreen) {
             iframe.requestFullscreen();
-        } else if (iframe.webkitRequestFullscreen) { // Safari
+        } else if (iframe.webkitRequestFullscreen) { 
             iframe.webkitRequestFullscreen();
-        } else if (iframe.msRequestFullscreen) { // IE11
+        } else if (iframe.msRequestFullscreen) { 
             iframe.msRequestFullscreen();
         }
     }
