--- a/MiniDOGE.html
+++ b/MiniDOGE.html
@@ -219,6 +219,12 @@
             <iframe id="doge-unblocker-frame" src="https://dogev4.ssp.42web.io/"></iframe>
             <button class="fullscreen-button" onclick="toggleFullscreen('doge-unblocker-frame')">Fullscreen</button>
         </div>
+
+        <h2>Astroid v3</h2>
+        <div class="iframe-container">
+            <iframe id="astroid-frame" src="https://astroid-dns.ssp.42web.io/"></iframe>
+            <button class="fullscreen-button" onclick="toggleFullscreen('astroid-frame')">Fullscreen</button>
+        </div>
     </div>
 
     <script>
